tests/compilation_error/variable_redeclaration_2.ll
int a = 4
string b = "omg"
bool a
